# ComfyUI-Griptape

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO  __init__.py  check_extras.ps1  check_extras.sh  griptape_config.json.default  install.py  menu_new.md  pyproject-dev.toml  pyproject.toml  requirements.txt  requirements_old.txt  requirements_old_33.txt  typos.toml
.github/workflows/: publish_action.yml  release.yml  update-versions.yml
example_workflows/: Griptape-Agent-Config.json  Griptape-Text-to-Speech.json  README.md  createNewModel.json  griptape_black_forest_flux_inpainting.json  griptape_black_forest_labs_create_image.json  griptape_black_forest_labs_create_variation.json  inpainting.json  key_value_pair.json  retrieval_augmented_generation.json  sort_list_with_python_code.json
example_workflows/text/: letter_application.txt  letter_camp.txt  letter_grandma.txt  letter_information_request.txt  mission_logs.json  movie_titles_fake.tsv  resume.docx  resume.md  resume_bot.txt  resume_chloe.txt  resume_johndoe.txt  robot_drone_parts.csv  sales_forecast.csv
examples/: Griptape-Agent-Config.json  Griptape-Expert-Photographers.json  Griptape-Text-to-Speech.json  OffPrompt.json  Photographer-Workflow-Comparison-Example.json  README.md  retrieval_augmented_generation.json
examples/text/: drone_operation_settings.json  financial_report.csv  letter_customer_complaint.txt  life_detection_device_inventory.json  mission_config.json  resume_mario.txt  rules.csv  student_grades.csv  team_roster.csv
js/: CodeExecutionNode.js  CodeExecutionNodeTemplates.js  ColorNodes.js  CombineNodes.js  CommentWidgets.js  ConfigurationNodes.js  DisplayNodes.js  ExtractionNodes.js  FlowNodes.js  GriptapeNodes.js  HtmlNode.js  NodesWithVisibilityToggles.js  TextLoaderModuleNodes.js  apiKeyButtons.js  griptape_api_keys.js  gtUI.css  gtUIChat.js  gtUIConfigDialog.js  gtUIContextMenu.js  gtUIMenuSeparator.js  gtUINodes.js  gtUIUtils.js  menu.js  menu.js.disabled  nodeFixes.js  settings.js  utils.js  versions.js
nodes/: Separator.py  __init__.py  agent.py  audio_drivers.py  audio_nodes.py  base_agent.py  base_audio_task.py  base_config.py  base_driver.py  base_engine.py  base_image_task.py  base_loader.py  base_output_node.py.example  base_task.py  base_tool.py  combine_nodes.py  config.py  config_nodes.py  custom_routes.py  display_nodes.py  drivers.py  engine_nodes.py  get_version.py  griptape_config.py  gtUIBase.py  html_node.py  image_drivers.py  image_nodes.py  input_nodes.py  list.py  loaders.py  output_nodes.py  rules.py  string_nodes.py  structure_nodes.py  tasks.py  text_nodes.py  tools.py  utilities.py  utils.py  (+2 more)
nodes/agent/: BaseAgent.py  CreateAgent.py  ExpandAgent.py  RunAgent.py  SetDefaultAgent.py  __init__.py  agent.py  base_agent.py  convert_agent_to_tool.py  create_agent.py  expand_agent.py  gtComfyAgent.py  gtUICloudAssistant.py  gtUICreateAgentFromConfig.py  gtUICreateAgentFromModelfile.py  gtUICreateAgentModelfile.py  gtUIReplaceRulesetsOnAgent.py  gtUIReplaceToolsOnAgent.py  gtUIRunAgent.py  gtUISetDefaultAgent.py  run_agent.py  set_default_agent.py
nodes/chat/: gtUIChat.py
nodes/combine/: MergeDictionary.py  MergeTexts.py  RulesList.py  StringList.py  ToolList.py  gtUIMergeInputs.py  gtUIModuleList.py
nodes/config/: AmazonBedrockStructureConfig.py  AnthropicStructureConfig.py  AzureOpenAiStructureConfig.py  BaseConfig.py  GoogleStructureConfig.py  HuggingFaceStructureConfig.py  LmStudioStructureConfig.py  OllamaStructureConfig.py  OpenAiCompatableConfig.py  OpenAiConfig.py  amazon_bedrock_config.py  anthropic_config.py  azure_openai_config.py  base_config.py  env_config.py  google_config.py  gtUIAmazonBedrockDriversConfig.py  gtUIAmazonBedrockSession.py  gtUIAmazonBedrockStructureConfig.py  gtUIAnthropicDriversConfig.py  gtUIAnthropicStructureConfig.py  gtUIAzureOpenAiDriversConfig.py  gtUIAzureOpenAiStructureConfig.py  gtUIBaseConfig.py  gtUIBaseDriversConfig.py  gtUICohereDriversConfig.py  gtUICohereStructureConfig.py  gtUIEnvConfig.py  gtUIGoogleDriversConfig.py  gtUIGoogleStructureConfig.py  gtUIGriptapeCloudDriversConfig.py  gtUIGrokDriversConfig.py  gtUIGroqDriversConfig.py  gtUIHuggingFaceDriversConfig.py  gtUIHuggingFaceStructureConfig.py  gtUILMStudioDriversConfig.py  gtUILMStudioStructureConfig.py  gtUIOllamaDriversConfig.py  gtUIOllamaStructureConfig.py  gtUIOpenAiCompatableConfig.py  (+11 more)
nodes/convert/: TextToClipEncode.py  TextToCombo.py  gtUITextToClipEncode.py  gtUITextToCombo.py
nodes/display/: OutputArtifactNode.py  OutputImageNode.py  OutputStringNode.py  SaveImageNode.py  gtUIOutputArtifactNode.py  gtUIOutputDataNode.py  gtUIOutputDictionaryNode.py  gtUIOutputImageNode.py  gtUIOutputMarkdownNode.py  gtUIOutputStringNode.py  gtUISaveImageNode.py
nodes/drivers/: AmazonBedrockPromptDriver.py  AmazonBedrockStableDiffusionImageGenerationDriver.py  AmazonBedrockTitanEmbeddingDriver.py  AmazonBedrockTitanImageGenerationDriver.py  AmazonSageMakerJumpstartEmbeddingDriver.py  AmazonSageMakerJumpstartPromptDriver.py  AnthropicPromptDriver.py  AzureOpenAiChatPromptDriver.py  AzureOpenAiEmbeddingDriver.py  AzureOpenAiImageGenerationDriver.py  BaseAudioTranscriptionDriver.py  BaseDriver.py  BaseEmbeddingDriver.py  BaseImageDriver.py  BasePromptDriver.py  BaseTextToSpeechDriver.py  BaseWebSearchDriver.py  CohereEmbeddingDriver.py  CoherePromptDriver.py  DuckDuckGoWebSearchDriver.py  ElevenLabsTextToSpeechDriver.py  GoogleEmbeddingDriver.py  GooglePromptDriver.py  GoogleWebSearchDriver.py  HuggingFaceHubEmbeddingDriver.py  HuggingFaceHubPromptDriver.py  LMStudioChatPromptDriver.py  LocalStructureRunDriver.py  LonardoImageGenerationDriver.py  OllamaPromptDriver.py  OpenAiAudioTranscriptionDriver.py  OpenAiChatPromptDriver.py  OpenAiCompatableChatPromptDriver.py  OpenAiCompatableEmbeddingDriver.py  OpenAiEmbeddingDriver.py  OpenAiImageGenerationDriver.py  (+77 more)
py/: griptape_config.py  griptape_settings.py
tests/: rag_workflow.py
workflow-tests/: ConfigTests.json  testing_nodes.json
workflows/: Agent_Configuration_Options.json  testing_nodes.json
(+151 files in other folders)
