[tool.poetry]
name = "comfyui-griptape"
version = "1.0.5"
description = "Griptape LLM(Large Language Model) Nodes for ComfyUI."
authors = ["Jason Schleifer <jason.schleifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
griptape = { version = "^0.33.0", extras = ["drivers-web-search-tavily","drivers-web-search-exa","drivers-image-generation-huggingface","drivers-prompt-cohere","drivers-prompt-anthropic","drivers-prompt-huggingface-hub","drivers-prompt-amazon-bedrock","drivers-prompt-amazon-sagemaker","drivers-prompt-google","drivers-prompt-ollama","drivers-embedding-amazon-bedrock","drivers-embedding-amazon-sagemaker","drivers-embedding-huggingface","drivers-embedding-voyageai","drivers-embedding-google","drivers-embedding-cohere","drivers-embedding-ollama","drivers-vector-pinecone","drivers-vector-marqo","drivers-vector-mongodb","drivers-vector-redis","drivers-vector-opensearch","drivers-vector-pgvector","drivers-vector-postgresql","drivers-vector-qdrant","drivers-web-scraper-trafilatura","drivers-web-scraper-markdownify","drivers-web-search-duckduckgo","loaders-pdf","loaders-image","drivers-text-to-speech-elevenlabs"]}

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
#torch = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
#torchvision = {version = "^0.18.1+cu121", source = "pytorch-gpu-src"}
#torchaudio = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
comfy-cli = "^1.1.5"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

#  Used by Comfy Registry https://comfyregistry.org
[project]
name = "comfyui-griptape"
description = "Griptape LLM(Large Language Model) Nodes for ComfyUI."
version = "1.0.7"
license = {file = "LICENSE"}
dependencies = ["griptape[drivers-web-search-tavily,drivers-web-search-exa,drivers-prompt-cohere,drivers-prompt-anthropic,drivers-prompt-huggingface-hub,drivers-prompt-amazon-bedrock,drivers-prompt-amazon-sagemaker,drivers-prompt-google,drivers-prompt-ollama,drivers-embedding-amazon-bedrock,drivers-embedding-amazon-sagemaker,drivers-embedding-huggingface,drivers-embedding-voyageai,drivers-embedding-google,drivers-embedding-cohere,drivers-text-to-speech-elevenlabs,drivers-vector-pinecone,drivers-vector-marqo,drivers-vector-mongodb,drivers-vector-redis,drivers-vector-opensearch,drivers-vector-pgvector,drivers-vector-qdrant,drivers-web-scraper-trafilatura,drivers-web-scraper-markdownify,drivers-web-search-duckduckgo,loaders-pdf,loaders-image]==0.33.0", "python-dotenv"]

[project.urls]
Repository = "https://github.com/griptape-ai/ComfyUI-Griptape"

[tool.comfy]
PublisherId = "shhlife"
DisplayName = "ComfyUI-Griptape"
Icon = "https://cdn.prod.website-files.com/65d658559223871198e78bca/65e4fd64fb258c6d9bd8c276_griptape-Chunck_beige.svg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
