[tool.poetry]
name = "comfyui-griptape"
version = "1.0.5"
description = "Griptape LLM(Large Language Model) Nodes for ComfyUI."
authors = ["Jason Schleifer <jason.schleifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
griptape = { version = "^0.33.1", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
#torch = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
#torchvision = {version = "^0.18.1+cu121", source = "pytorch-gpu-src"}
#torchaudio = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
comfy-cli = "^1.1.5"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

#  Used by Comfy Registry https://comfyregistry.org
[project]
name = "comfyui-griptape"
description = "Griptape LLM(Large Language Model) Nodes for ComfyUI."
version = "1.0.8"
license = {file = "LICENSE"}
dependencies = ["griptape[all]==0.33.1", "python-dotenv"]

[project.urls]
Repository = "https://github.com/griptape-ai/ComfyUI-Griptape"

[tool.comfy]
PublisherId = "shhlife"
DisplayName = "ComfyUI-Griptape"
Icon = "https://cdn.prod.website-files.com/65d658559223871198e78bca/65e4fd64fb258c6d9bd8c276_griptape-Chunck_beige.svg"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
